edited structure
